@@ -11,6 +11,7 @@ Snapshot ????-??-?? ToDo
 
 Now
  * Fix bugs with choosing best when next can be worst.
+ * Support for ios_base::width field for outputting Objects (don't use for store them).
 
 Version 0.0.0.4 2010-11-08
  * Move map loader into static member of World.
